# UpdateByPatch

app/: build.gradle
app/src/androidTest/java/com/bluetree/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/bluetree/myapplication/: MainActivity.java
app/src/main/res/drawable-anydpi/: ic_action_name.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/bluetree/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
